--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ url:              http://nickbottomley.com
 paginate:         5
 paginate_path:    "blog/page:num"
 
-baseurl:          "http://nickb1080.github.io/personal-site"
+baseurl:          "http://nickbottomley.com"
 
 author:
   name:           "Nick Bottomley"
-  url:            http://nickbottomley.com
+  url:            "http://nickbottomley.com"
 
 # Custom vars
 # version:          1.0.0
