--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -9,11 +9,11 @@ permalink:        pretty
 title:            Nick Bottomley
 tagline:          "Full-stack Software Engineer"
 description:      ''
-url:              "http://nickbottomley.com"
+url:              "http://localhost:4000"
 paginate:         5
 paginate_path:    "blog/page:num"
 
-baseurl:          "http://nickbottomley.com"
+baseurl:          "http.com"
 
 author:
   name:           "Nick Bottomley"
