--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -13,7 +13,7 @@ url:              "http://localhost:4000"
 paginate:         5
 paginate_path:    "blog/page:num"
 
-baseurl:          "http.com"
+baseurl:          "http://localhost:4000"
 
 author:
   name:           "Nick Bottomley"
